Fixed alignment on Ipad and Iphone devices.

--- a/style.css
+++ b/style.css
@@ -1,15 +1,22 @@
-html {
-	height: 100%;
+html,body {
+    width: 100%;
+    height: 100%;
 }
+
 body {
-	height: 100%;
 	background-color: #323D45;
 }
 
 * {
 	font-family: "Quicksand", sans-serif;
-	/*color: white;*/
-	/*border: 1px solid red;*/
+
+	/* For debugging */
+	
+	/*
+	background: #000 !important;
+	color: #0f0 !important;
+	outline: solid #f00 1px !important;
+	*/
 }
 
 .default-colour {
